--- a/flocktofedora.org/static/css/flock.css
+++ b/flocktofedora.org/static/css/flock.css
@@ -8,7 +8,7 @@ body {
 }
 
 .bg {
-  background: #1a3c6d url('https://i.imgur.com/xpHWnKT.jpg') no-repeat;
+  background: #1a3c6d url('/static/images/detroit_skyline.jpg') no-repeat;
   background-position: 50% 28%;
   width: 100%;
   height: 350px; /*same height as jumbotron */
