Initial content for Comp Neuro Lab

--- a/labs.fedoraproject.org/static/css/app.css
+++ b/labs.fedoraproject.org/static/css/app.css
@@ -457,6 +457,7 @@ margin-top:4px;
 #head .screenshot-text h3 { color: #60605b; margin-top: 0px; }
 #head .screenshot-text a:hover { text-decoration: none; }
 #head .copr-astronomy { background:url(../images/astronomy/astronomy-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
+#head .copr-comp-neuro { background:url(../images/comp-neuro/comp-neuro-splash.jpg) 50% 50% / cover no-repeat; postition:relative; min-height: 230px; }
 #head .copr-design { background:url(../images/design/design-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-games { background:url(../images/games/games-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
 #head .copr-jam { background:url(../images/jam/jam-splash.jpg) 50% 50% / cover no-repeat; position:relative; min-height: 230px; }
