Replace broken Fedora Atomic link with Fedora CoreOS link

--- a/budget.fedoraproject.org/data/templates/footer.html
+++ b/budget.fedoraproject.org/data/templates/footer.html
@@ -39,7 +39,7 @@
                           <dl>
                             <dd><a href="//getfedora.org/${lang}/workstation/download">${_('Get Fedora Workstation')}</a></dd>
                             <dd><a href="//getfedora.org/${lang}/server/download">${_('Get Fedora Server')}</a></dd>
-                            <dd><a href="//getfedora.org/${lang}/atomic/download">${_('Get Fedora Atomic')}</a></dd>
+                            <dd><a href="//getfedora.org/${lang}/coreos/download">${_('Get Fedora CoreOS')}</a></dd>
                             <dd><a href="//spins.fedoraproject.org">${_('Fedora Spins')}</a></dd>
                             <dd><a href="//labs.fedoraproject.org">${_('Fedora Labs')}</a></dd>
                             <dd><a href="//arm.fedoraproject.org">${Markup(_('Fedora ARM&lt;span class="sup"&gt;&reg;&lt;/span&gt;'))}</a></dd>
