--- a/start.fedoraproject.org/static/css/app.css
+++ b/start.fedoraproject.org/static/css/app.css
@@ -17,7 +17,7 @@
 }
 
 .bluebox {
-  background-color: #3c6eb4;
+  background-color: #52a2da;
   height: 85px;
 }
 
@@ -74,7 +74,7 @@ img.header-icon {
 }
 
 .white h3 {
-  color: #3c6eb4;
+  color: #52a2da;
   margin-top: 12px;
 }
 
@@ -95,7 +95,7 @@ a:focus.title {
 }
 
 .readme {
-  background-color: #3c6eb4;
+  background-color: #52a2da;
   color: #fff;
   border-radius: 5px;
   -moz-border-radius: 5px;
