Added another vertical segment for contributor segment

--- a/start.fedoraproject.org/data/templates/docs-header.html
+++ b/start.fedoraproject.org/data/templates/docs-header.html
@@ -4,19 +4,24 @@
   xmlns:py="http://genshi.edgewall.org/"
   xmlns:xi="http://www.w3.org/2001/XInclude"
   py:strip="">
-    <div class="col-xs-12 col-sm-4 bluebox border">
+    <div class="col-xs-12 col-sm-3 bluebox border">
       <div class="text-center">
         <h3><a href="https://docs.fedoraproject.org/" alt="Fedora Docs"><i class="fa fa-fw fa-book header-icon"></i>${_('Fedora Documentation')}</a></h3>
       </div>
     </div>
-    <div class="col-xs-12 col-sm-4 bluebox border">
+    <div class="col-xs-12 col-sm-3 bluebox border">
       <div class="text-center">
         <h3><a href="https://ask.fedoraproject.org/" alt="Ask Fedora"><i class="fa fa-fw fa-question-circle header-icon"></i>${_('Help for Fedora Users')}</a></h3>
       </div>
     </div>
-    <div class="col-xs-12 col-sm-4 bluebox">
+    <div class="col-xs-12 col-sm-3 bluebox border">
       <div class="text-center">
         <h3><a href="https://getfedora.org" alt="Get Fedora"><i class="fa fa-fw fa-download header-icon"></i>${_('Get Fedora')}</a></h3>
+      </div>
+    </div>
+    <div class="col-xs-12 col-sm-3 bluebox border">
+      <div class="text-center">
+        <h3><a href="https://pagure.io/design/issue/raw/files/9073a2548c72da71a9a15daeda63e3c75d55a2a7d25c4ce692feae2ee8aa6bb4-contributor-survey.png" alt="Fill Contributor Survey"><i class="fa fa-fw fa-mail-reply header-icon"></i>${_('Fill Contributor Survey')}</a></h3>
       </div>
     </div>
 </html>
