Added correct contributor survey link for 2021

--- a/start.fedoraproject.org/data/templates/docs-header.html
+++ b/start.fedoraproject.org/data/templates/docs-header.html
@@ -21,7 +21,7 @@
     </div>
     <div class="col-xs-12 col-sm-3 bluebox border">
       <div class="text-center">
-        <h3><a href="https://pagure.io/design/issue/raw/files/9073a2548c72da71a9a15daeda63e3c75d55a2a7d25c4ce692feae2ee8aa6bb4-contributor-survey.png" alt="Fill Contributor Survey"><i class="fa fa-fw fa-mail-reply header-icon"></i>${_('Fill Contributor Survey')}</a></h3>
+        <h3><a href="https://fedoraproject.limequery.com/2021" alt="Fill Contributor Survey"><i class="fa fa-fw fa-mail-reply header-icon"></i>${_('Fill Contributor Survey')}</a></h3>
       </div>
     </div>
 </html>
