--- a/fedoraproject.org/data/templates/foot.html
+++ b/fedoraproject.org/data/templates/foot.html
@@ -26,7 +26,7 @@
             <dl>
                 <dt>${_('Support')}</dt>
                 <dd><a href="http://fedoraproject.org/${lang}/get-help">${_('Get Help')}</a></dd>
-                <dd><a href="irc://irc.freenode.org/#fedora">${_('IRC Help')}</a></dd>
+                <dd><a href="irc://irc.libera.chat/#fedora">${_('IRC Help')}</a></dd>
                 <dd><a href="https://admin.fedoraproject.org/mailman/listinfo/users">${_('Mailing List Help')}</a></dd>
                 <dd><a href="http://ask.fedoraproject.org/">${_('Ask Fedora')}</a></dd>
                 <dd><a href="http://docs.fedoraproject.org/">${_('Documentation')}</a></dd>
