--- a/labs.fedoraproject.org/data/templates/comp-neuro/supportresources.html
+++ b/labs.fedoraproject.org/data/templates/comp-neuro/supportresources.html
@@ -16,7 +16,7 @@
         <div class="row top-margin">
           <div class="col-md-4 col-xs-12 text-center">
             <h3><i class="fa fa-fw fa-lg header-icon fa-comments"></i>${_('Chat')}</h3>
-            <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-neuro&lt;/a&gt; IRC channel on &lt;strong&gt;irc.freenode.org&lt;/strong&gt; and the &lt;a href="%s"&gt;NeuroFedora&lt;/a&gt; supergroup on Telegram for real-time chat.') % ('http://webchat.freenode.net/?channels=fedora-neuro', 'https://t.me/NeuroFedora'))}</p>
+            <p>${Markup(_('Users and developers are available in the &lt;a href="%s"&gt;#fedora-neuro&lt;/a&gt; IRC channel on &lt;strong&gt;irc.libera.chat&lt;/strong&gt; and the &lt;a href="%s"&gt;NeuroFedora&lt;/a&gt; supergroup on Telegram for real-time chat.') % ('https://web.libera.chat/?channels=#fedora-neuro', 'https://t.me/NeuroFedora'))}</p>
           </div>
           <div class="col-md-4 col-xs-12 text-center">
             <h3><i class="fa fa-fw fa-lg header-icon fa-envelope-o"></i>${_('Email')}</h3>
