add language button to fedoracommunity

--- a/fedoracommunity.org/data/templates/css.html
+++ b/fedoracommunity.org/data/templates/css.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="${path}/static/css/text.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="${path}/static/css/960.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="${path}/static/css/fedoracommunity960.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="${path}/static/css/language-picker.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="${path}/static/css/font-awesome.css" media="screen" />
     <link rel="shortcut icon" href="https://fedoraproject.org/static/images/favicon.ico" sizes="16x16 32x32" type="image/vnd.microsoft.icon"/>
 
     <!--[if lt IE 7]>
