--- a/fedoracommunity.org/data/templates/footer.html
+++ b/fedoracommunity.org/data/templates/footer.html
@@ -82,7 +82,14 @@
                 <li><a href="http://fedoraproject.org/wiki/Legal:Licenses?rd=Legal/Licenses#This_Website">${_('Content License')}</a></li>
             </ul>
         </div>
-        <div class="clear">&nbsp;</div>
+
+        <div class="grid_16">
+            <div class="widget-body">
+                <xi:include href="../templates/translations.html" />
+            </div>
+        </div>
+        <div class="clear"></div>
+
     </div>
     ${Markup(_(buildstring))}
 </html>
